deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  replicas: 2 # number of identical instances of our application
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website # label that Service is targeting
    spec:
      containers:
        - name: website
          image: nginx:latest # container image from docker hub
          ports:
            - containerPort: 80 # the container listens on port 80
          volumeMounts:
            - name: html-files-volume
              mountPath: /usr/share/nginx/html # folder to put index.html into
      volumes:
        - name: html-files-volume
          configMap:
            name: html-files
            items:
              - key: index.html
                path: index.html
