pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: website
  # labels:
  #   app: website
spec:
  containers:
    - name: website
      image: nginx:latest
      ports:
        - containerPort: 80
